# malloc

./: .gitignore  CMakeLists.txt  Makefile  a.out  run_mac.sh
garbage/: from_libft.c  main.c  test.c
includes/: ft_malloc.h  malloc.h  malloc_structs.h
libft/: Makefile  ft_free_int_mass.c  ft_free_str_mass.c  ft_int_arr_new.c  ft_max.c  ft_min.c  ft_str_arr_new.c  libft.h
libft/collections/: arr_add.c  arr_del.c  arr_each.c  arr_get.c  arr_init.c  collections_header.h  collections_help_header.h  collections_struct.h  hmap2.c  ilist_setters.c  llist_get.c  llist_init.c  rbtree_track.c
src/: debug.c  error.c  free.c  from_libft.c  ft_free_realloc.c  ft_malloc.c  helper.c  main.c  malloc.c  math.c  mutex.c  my_test.c  page.c  page_size.c  pages.c  print.c  root.c  show_alloc_mem.c  store.c  store2.c  test.c
tests/: test0.c  test1.c  test2.c  test3.1.c  test3.2.c  test4.c  test5.c
